# egawari

./: .editorconfig  Cargo.toml  Dockerfile  README.md
.github/workflows/: rust.yml
src/: color.rs  config.rs  main.rs  stdout.rs  tests.rs
