[package]
name = "egawari"
version = "0.1.0"
authors = ["acedron <acedrons@yahoo.co.jp>"]
description = "Makes your touchpad work like a graphics tablet."
readme = "README.md"
homepage = "https://github.com/acedron/egawari"
repository = "https://github.com/acedron/egawari"
license = "GPL-3.0-or-later"
keywords = ["linux", "input", "touchpad"]
categories = ["command-line-utilities"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.42"
serde = "1.0.126"
fancy-regex = "0.7.0"
